--- a/demo-ftppool/pom.xml
+++ b/demo-ftppool/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>plugin-ftp-pool</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sly</groupId>
+			<artifactId>plugin-xss-filter-starter</artifactId>
+			<version>1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
